--- a/measuring/accessibility.ipynb
+++ b/measuring/accessibility.ipynb
@@ -10,19 +10,21 @@
     "\n",
     "For each enclosed tessellation cell, we want to know how many POIs are within 15 minutes walking distance (translated to 1200m). Furhtemore, we want to know how far is the closes one.\n",
     "\n",
-    "We use `pandana` package to generate accessibility characters. Pandana uses efficient [contraction hierarchies](https://en.wikipedia.org/wiki/Contraction_hierarchies) algorithm to measure the shortes path in a network. Therefore, we link each enclosed cell to a node of a network (the actual linking has been already done in [previous steps](morpohometrics)). Then we link each POI to a node of network and compute distances between nodes. Resulting values are then transferred from nodes back to tessellation. Note that all tessellation cells attached to a single node will share the same value."
+    "We use [`pandana`](http://udst.github.io/pandana/) package to generate accessibility characters. Pandana uses efficient [contraction hierarchies](https://en.wikipedia.org/wiki/Contraction_hierarchies) algorithm to measure the shortes path in a network. Therefore, we link each enclosed cell to a node of a network (the actual linking has been already done in [previous steps](morpohometrics)). Then we link each POI to a node of network and compute distances between nodes. Resulting values are then transferred from nodes back to tessellation. Note that all tessellation cells attached to a single node will share the same value."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
     "import pandana\n",
     "import pandas as pd\n",
-    "from shapely.geometry import box"
+    "from shapely.geometry import box\n",
+    "from tqdm import tqdm\n",
+    "import pygeos"
    ]
   },
   {
@@ -62,15 +64,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.81 s, sys: 0 ns, total: 5.81 s\n",
-      "Wall time: 351 ms\n"
+      "CPU times: user 5.51 s, sys: 16.1 ms, total: 5.52 s\n",
+      "Wall time: 328 ms\n"
      ]
     }
    ],
@@ -110,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 12.8 ms, sys: 4.16 ms, total: 17 ms\n",
-      "Wall time: 14.8 ms\n"
+      "CPU times: user 17.8 ms, sys: 115 µs, total: 17.9 ms\n",
+      "Wall time: 15.7 ms\n"
      ]
     }
    ],
@@ -259,6 +261,358 @@
    "source": [
     "nodes.plot('food_distance', figsize=(12, 12), markersize=(.1), scheme='quantiles', missing_kwds={'color': 'grey', 'markersize': .1})"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Measure accessiblity characters\n",
+    "\n",
+    "Now, we measure accessibility to:\n",
+    "\n",
+    "- supermarkets (using Geolytix data)\n",
+    "- listed buildings\n",
+    "- FHRS points\n",
+    "- cultural venues\n",
+    "\n",
+    "Cultural venues are often both points and polygons, therefore we remove duplicates.\n",
+    "\n",
+    "Pandana is multi-threaded, therefore we do not need to use `dask` to parallelise the operation on a single machine. It is also a memory-heavy operation, so we would not fit with multiple processes anyway."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "supermarkets = pd.read_csv('../../urbangrammar_samba/functional_data/pois/GEOLYTIX - RetailPoints/geolytix_retailpoints_v17_202008.csv')\n",
+    "listed = gpd.read_parquet('../../urbangrammar_samba/functional_data/pois/listed_buildings/listed_buildings_gb.pq')\n",
+    "fhrs = pd.read_csv('../../urbangrammar_samba/functional_data/fhrs/Data/fhrs_location_20200528.csv')\n",
+    "culture = gpd.read_parquet('../../urbangrammar_samba/functional_data/pois/culture_gb.pq')\n",
+    "\n",
+    "supermarkets = gpd.GeoDataFrame(supermarkets, geometry=gpd.points_from_xy(supermarkets.bng_e, supermarkets.bng_n), crs=27700)\n",
+    "fhrs = gpd.GeoDataFrame(fhrs, geometry=gpd.points_from_xy(fhrs.bng_east, fhrs.bng_north), crs=27700)\n",
+    "\n",
+    "culture = culture.reset_index(drop=True)\n",
+    "inp, res = pygeos.STRtree(culture.geometry.values.data).query_bulk(culture.geometry.values.data, predicate='contains_properly')\n",
+    "culture = culture.drop(inp)\n",
+    "culture.geometry = culture.centroid"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  1%|          | 1/97 [00:00<00:18,  5.18it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chunk 6 skipped, would blow memory.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  7%|▋         | 7/97 [1:04:36<10:28:39, 419.10s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chunk 12 skipped, would blow memory.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 10%|█         | 10/97 [1:30:13<9:49:48, 406.77s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chunk 15 skipped, would blow memory.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 11%|█▏        | 11/97 [1:48:45<14:46:23, 618.41s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "for c in tqdm(range(6, 103), total=97):\n",
+    "    nodes = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/nodes/nodes_{c}.pq')\n",
+    "    if len(nodes) > 60000:\n",
+    "        print(f\"chunk {c} skipped, would blow memory.\")\n",
+    "    else:    \n",
+    "        edges = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/edges/edges_{c}.pq')\n",
+    "        nodes = nodes.set_index('nodeID')\n",
+    "        network = pandana.Network(nodes.geometry.x, nodes.geometry.y, \n",
+    "                              edges['node_start'], edges['node_end'], edges[['mm_len']])\n",
+    "        network.precompute(1200)\n",
+    "\n",
+    "        supermarkets_c = gpd.clip(supermarkets, box(*nodes.total_bounds))\n",
+    "        network.set_pois(category = 'supermarkets',\n",
+    "                         maxdist = 1200,\n",
+    "                         maxitems=1000,\n",
+    "                         x_col = supermarkets_c.bng_e, \n",
+    "                         y_col = supermarkets_c.bng_n)\n",
+    "\n",
+    "        supermarkets_r = network.nearest_pois(distance = 1200,\n",
+    "                                   category = 'supermarkets',\n",
+    "                                   num_pois = 1000 if len(supermarkets_c) > 1000 else len(supermarkets_c),\n",
+    "                                   include_poi_ids = False)\n",
+    "\n",
+    "        listed_c = gpd.clip(listed, box(*nodes.total_bounds)).explode()\n",
+    "        network.set_pois(category = 'listed',\n",
+    "                         maxdist = 1200,\n",
+    "                         maxitems=10000,\n",
+    "                         x_col = listed_c.geometry.x, \n",
+    "                         y_col = listed_c.geometry.y)\n",
+    "\n",
+    "        listed_r = network.nearest_pois(distance = 1200,\n",
+    "                                   category = 'listed',\n",
+    "                                   num_pois = 10000 if len(listed_c) > 10000 else len(listed_c),\n",
+    "                                   include_poi_ids = False)\n",
+    "\n",
+    "\n",
+    "        fhrs_c = gpd.clip(fhrs, box(*nodes.total_bounds))\n",
+    "        network.set_pois(category = 'fhrs',\n",
+    "                         maxdist = 1200,\n",
+    "                         maxitems=10000,\n",
+    "                         x_col = fhrs_c.bng_east, \n",
+    "                         y_col = fhrs_c.bng_north)\n",
+    "\n",
+    "        fhrs_r = network.nearest_pois(distance = 1200,\n",
+    "                                   category = 'fhrs',\n",
+    "                                   num_pois = 10000 if len(fhrs_c) > 10000 else len(fhrs_c),\n",
+    "                                   include_poi_ids = False)\n",
+    "\n",
+    "\n",
+    "        culture_c = gpd.clip(culture, box(*nodes.total_bounds))\n",
+    "        network.set_pois(category = 'culture',\n",
+    "                         maxdist = 1200,\n",
+    "                         maxitems=500,\n",
+    "                         x_col = culture_c.geometry.x, \n",
+    "                         y_col = culture_c.geometry.y)\n",
+    "\n",
+    "        culture_r = network.nearest_pois(distance = 1200,\n",
+    "                                   category = 'culture',\n",
+    "                                   num_pois = 500 if len(culture_c) > 500 else len(culture_c),\n",
+    "                                   include_poi_ids = False)\n",
+    "\n",
+    "        sup = supermarkets_r.replace(1200, pd.NA)\n",
+    "        nodes['supermarkets_nearest'] = sup.min(axis=1)\n",
+    "        nodes['supermarkets_counts'] = sup.count(axis=1)\n",
+    "\n",
+    "        lis = listed_r.replace(1200, pd.NA)\n",
+    "        nodes['listed_nearest'] = lis.min(axis=1)\n",
+    "        nodes['listed_counts'] = lis.count(axis=1)\n",
+    "\n",
+    "\n",
+    "        fhr = fhrs_r.replace(1200, pd.NA)\n",
+    "        nodes['fhrs_nearest'] = fhr.min(axis=1)\n",
+    "        nodes['fhrs_counts'] = fhr.count(axis=1)\n",
+    "\n",
+    "        cul = culture_r.replace(1200, pd.NA)\n",
+    "        nodes['culture_nearest'] = cul.min(axis=1)\n",
+    "        nodes['culture_counts'] = cul.count(axis=1)\n",
+    "\n",
+    "        cells = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/cells/cells_{c}.pq')\n",
+    "        cells = cells.merge(nodes, on='nodeID', how='left')\n",
+    "        cells[['hindex', 'supermarkets_nearest', 'supermarkets_counts',\n",
+    "               'listed_nearest', 'listed_counts', 'fhrs_nearest',\n",
+    "               'fhrs_counts', 'culture_nearest', 'culture_counts'\n",
+    "              ]\n",
+    "             ].to_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/accessibility/access_{c}.pq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "done = glob(\"../../urbangrammar_samba/spatial_signatures/functional/accessibility/access_*.pq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "done = [int(x[76:-3]) for x in done]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6,\n",
+       " 12,\n",
+       " 15,\n",
+       " 18,\n",
+       " 24,\n",
+       " 26,\n",
+       " 30,\n",
+       " 40,\n",
+       " 41,\n",
+       " 45,\n",
+       " 51,\n",
+       " 56,\n",
+       " 61,\n",
+       " 70,\n",
+       " 75,\n",
+       " 79,\n",
+       " 80,\n",
+       " 92,\n",
+       " 98,\n",
+       " 101,\n",
+       " 102]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "todo = [x for x in range(103) if x not in done]\n",
+    "todo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 14%|█▍        | 3/21 [1:18:25<7:50:21, 1567.87s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "for c in tqdm(todo, total=len(todo)):\n",
+    "    nodes = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/nodes/nodes_{c}.pq')\n",
+    "    edges = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/edges/edges_{c}.pq')\n",
+    "    nodes = nodes.set_index('nodeID')\n",
+    "    network = pandana.Network(nodes.geometry.x, nodes.geometry.y, \n",
+    "                          edges['node_start'], edges['node_end'], edges[['mm_len']])\n",
+    "    network.precompute(1200)\n",
+    "\n",
+    "    supermarkets_c = gpd.clip(supermarkets, box(*nodes.total_bounds))\n",
+    "    network.set_pois(category = 'supermarkets',\n",
+    "                     maxdist = 1200,\n",
+    "                     maxitems=1000,\n",
+    "                     x_col = supermarkets_c.bng_e, \n",
+    "                     y_col = supermarkets_c.bng_n)\n",
+    "\n",
+    "    res = network.nearest_pois(distance = 1200,\n",
+    "                               category = 'supermarkets',\n",
+    "                               num_pois = 1000 if len(supermarkets_c) > 1000 else len(supermarkets_c),\n",
+    "                               include_poi_ids = False)\n",
+    "    \n",
+    "    res = res.replace(1200, pd.NA)\n",
+    "    nodes['supermarkets_nearest'] = res.min(axis=1)\n",
+    "    nodes['supermarkets_counts'] = res.count(axis=1)\n",
+    "\n",
+    "    listed_c = gpd.clip(listed, box(*nodes.total_bounds)).explode()\n",
+    "    network.set_pois(category = 'listed',\n",
+    "                     maxdist = 1200,\n",
+    "                     maxitems=10000,\n",
+    "                     x_col = listed_c.geometry.x, \n",
+    "                     y_col = listed_c.geometry.y)\n",
+    "\n",
+    "    res = network.nearest_pois(distance = 1200,\n",
+    "                               category = 'listed',\n",
+    "                               num_pois = 10000 if len(listed_c) > 10000 else len(listed_c),\n",
+    "                               include_poi_ids = False)\n",
+    "    \n",
+    "    res = res.replace(1200, pd.NA)\n",
+    "    nodes['listed_nearest'] = res.min(axis=1)\n",
+    "    nodes['listed_counts'] = res.count(axis=1)\n",
+    "\n",
+    "\n",
+    "    fhrs_c = gpd.clip(fhrs, box(*nodes.total_bounds))\n",
+    "    network.set_pois(category = 'fhrs',\n",
+    "                     maxdist = 1200,\n",
+    "                     maxitems=10000,\n",
+    "                     x_col = fhrs_c.bng_east, \n",
+    "                     y_col = fhrs_c.bng_north)\n",
+    "\n",
+    "    res = network.nearest_pois(distance = 1200,\n",
+    "                               category = 'fhrs',\n",
+    "                               num_pois = 10000 if len(fhrs_c) > 10000 else len(fhrs_c),\n",
+    "                               include_poi_ids = False)\n",
+    "\n",
+    "    res = res.replace(1200, pd.NA)\n",
+    "    nodes['fhrs_nearest'] = res.min(axis=1)\n",
+    "    nodes['fhrs_counts'] = res.count(axis=1)\n",
+    "\n",
+    "    culture_c = gpd.clip(culture, box(*nodes.total_bounds))\n",
+    "    network.set_pois(category = 'culture',\n",
+    "                     maxdist = 1200,\n",
+    "                     maxitems=500,\n",
+    "                     x_col = culture_c.geometry.x, \n",
+    "                     y_col = culture_c.geometry.y)\n",
+    "\n",
+    "    res = network.nearest_pois(distance = 1200,\n",
+    "                               category = 'culture',\n",
+    "                               num_pois = 500 if len(culture_c) > 500 else len(culture_c),\n",
+    "                               include_poi_ids = False)\n",
+    "\n",
+    "    res = res.replace(1200, pd.NA)\n",
+    "    nodes['culture_nearest'] = res.min(axis=1)\n",
+    "    nodes['culture_counts'] = res.count(axis=1)\n",
+    "\n",
+    "    cells = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/cells/cells_{c}.pq')\n",
+    "    cells = cells.merge(nodes, on='nodeID', how='left')\n",
+    "    cells[['hindex', 'supermarkets_nearest', 'supermarkets_counts',\n",
+    "           'listed_nearest', 'listed_counts', 'fhrs_nearest',\n",
+    "           'fhrs_counts', 'culture_nearest', 'culture_counts'\n",
+    "          ]\n",
+    "         ].to_parquet(f\"../../urbangrammar_samba/spatial_signatures/functional/accessibility/access_{c}.pq\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
