--- a/measuring/cross-chunk_indices.ipynb
+++ b/measuring/cross-chunk_indices.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,6 +282,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Larger extent to cover 10 topological steps\n",
+    "\n",
+    "Later we will also need to go furhter across chunks, so we get indices for 12 steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a83468a861194d23bff5fc0707d456b4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/103 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 45min 53s, sys: 2min 30s, total: 48min 23s\n",
+      "Wall time: 1h 2min 50s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "include = pd.Series(index=pd.MultiIndex.from_tuples([], names=['chunk', 'neighbors']), dtype=object)\n",
+    "\n",
+    "for ch in tqdm(range(103), total=103):\n",
+    "    target = chunks.loc[ch, 'geometry']\n",
+    "\n",
+    "    for n in w.neighbors[ch]:\n",
+    "        tess = gpd.read_parquet(f'../../urbangrammar_samba/spatial_signatures/morphometrics/cells/cells_{int(n)}.pq', columns=[\"tessellation\"])\n",
+    "\n",
+    "        ind = tess.sindex.query(target, predicate='intersects')\n",
+    "\n",
+    "        if ind.size > 0:\n",
+    "            incl = ind.tolist()\n",
+    "            for _ in range(12):\n",
+    "                inp, res = tess.sindex.query_bulk(tess.geometry.iloc[incl], predicate='intersects')\n",
+    "                incl += np.unique(res).tolist()\n",
+    "        else:\n",
+    "            incl = []\n",
+    "        include.loc[ch, int(n)] = np.unique(incl)\n",
+    "        \n",
+    "include = include[include.apply(lambda x: len(x) > 0)]\n",
+    "pd.DataFrame(include, columns=['indices']).to_parquet('../../urbangrammar_samba/spatial_signatures/cross-chunk_indices_10.pq')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -305,7 +368,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
