signatures characters cleanup

--- a/measuring/functional_data.ipynb
+++ b/measuring/functional_data.ipynb
@@ -2,20 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "lasting-climate",
+   "id": "attractive-caribbean",
    "metadata": {},
    "source": [
     "# Functional data\n",
     "\n",
     "This notebook links various functional layers to ET cells across GB.\n",
     "\n",
-    "## Population estimates"
+    "## Population estimates\n",
+    "\n",
+    "Population estimates are linked using area weighted interpolation based on building geometry."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "harmful-maintenance",
+   "id": "gorgeous-champagne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "surrounded-distance",
+   "id": "worthy-daisy",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "nearby-implementation",
+   "id": "wired-event",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "defensive-orchestra",
+   "id": "massive-harbor",
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "spanish-italy",
+   "id": "cooked-shanghai",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "purple-struggle",
+   "id": "genetic-village",
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "innocent-trail",
+   "id": "former-things",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "warming-dryer",
+   "id": "steady-equity",
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "incredible-torture",
+   "id": "hawaiian-angola",
    "metadata": {},
    "outputs": [
     {
@@ -391,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "representative-administration",
+   "id": "cordless-prior",
    "metadata": {},
    "outputs": [
     {
@@ -517,16 +519,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "expired-delicious",
+   "id": "southwest-calculation",
    "metadata": {},
    "source": [
-    "## Night lights"
+    "## Night lights\n",
+    "\n",
+    "Night lights are merged using zonal statistics."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "driven-cologne",
+   "id": "dietary-alabama",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -539,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "capital-energy",
+   "id": "another-today",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +570,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "matched-synthesis",
+   "id": "numerous-monster",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -1593,7 +1597,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "sorted-lawyer",
+   "id": "retained-classification",
    "metadata": {},
    "outputs": [
     {
@@ -1637,7 +1641,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "interested-dragon",
+   "id": "everyday-millennium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1668,7 +1672,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "speaking-sheet",
+   "id": "skilled-albert",
    "metadata": {
     "tags": []
    },
@@ -1799,16 +1803,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "mediterranean-mayor",
+   "id": "olympic-trader",
    "metadata": {},
    "source": [
-    "## Worplace population by industry"
+    "## Worplace population by industry\n",
+    "\n",
+    "Worplace population is linked using area weighted interpolation based on building geometry."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "possible-constraint",
+   "id": "through-november",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1818,7 +1824,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "intellectual-television",
+   "id": "swedish-binary",
    "metadata": {
     "tags": []
    },
@@ -1946,16 +1952,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "marked-socket",
+   "id": "sublime-anaheim",
    "metadata": {},
    "source": [
-    "## CORINE Land cover"
+    "## CORINE Land cover\n",
+    "\n",
+    "CORINE Land cover is linked using area weighted interpolation based on tessellation geometry."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "noted-region",
+   "id": "continuing-library",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1965,7 +1973,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "described-dressing",
+   "id": "plastic-artist",
    "metadata": {},
    "outputs": [
     {
@@ -2132,7 +2140,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "challenging-dealer",
+   "id": "great-order",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2177,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "promising-medication",
+   "id": "moderate-proposition",
    "metadata": {},
    "outputs": [
     {
@@ -3739,16 +3747,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "balanced-cooler",
+   "id": "funny-dallas",
    "metadata": {},
    "source": [
-    "## Retail centres"
+    "## Retail centres\n",
+    "\n",
+    "CDRC Retail centres are linked as a distance to the nearest one."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "potential-foundation",
+   "id": "published-margin",
    "metadata": {},
    "outputs": [
     {
@@ -3767,7 +3777,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "extended-stick",
+   "id": "chief-tobacco",
    "metadata": {},
    "outputs": [
     {
@@ -3811,7 +3821,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "accepted-bridal",
+   "id": "severe-panic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3840,7 +3850,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "periodic-organ",
+   "id": "unnecessary-destiny",
    "metadata": {},
    "outputs": [
     {
@@ -3969,16 +3979,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungarian-holocaust",
+   "id": "distant-apparatus",
    "metadata": {},
    "source": [
-    "## Water"
+    "## Water\n",
+    "\n",
+    "Water is measured as a distance to the nearest one."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "humanitarian-london",
+   "id": "standard-baghdad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3997,7 +4009,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accessible-circulation",
+   "id": "collective-animal",
    "metadata": {},
    "outputs": [],
    "source": [
